# ldacs_mcsotdma

./: .gitignore  BCLinkManagementEntity.cpp  BCLinkManagementEntity.hpp  BCLinkManager.cpp  BCLinkManager.hpp  BeaconModule.cpp  BeaconModule.hpp  BeaconPayload.hpp  CITATION.cff  CMakeLists.txt  CPRPosition.hpp  CongestionEstimator.cpp  CongestionEstimator.hpp  ContentionEstimator.cpp  ContentionEstimator.hpp  DutyCycle.cpp  DutyCycle.hpp  FrequencyChannel.cpp  FrequencyChannel.hpp  IcaoId.hpp  L2Header.hpp  L2Layer.cpp  L2Layer.hpp  L2Packet.hpp  LinkId.hpp  LinkInfo.cpp  LinkInfo.hpp  LinkInfoPayload.hpp  LinkManagementEntity.cpp  LinkManagementEntity.hpp  LinkManagementProcess.cpp  LinkManagementProcess.hpp  LinkManager.cpp  LinkManager.hpp  LinkProposalFinder.cpp  LinkProposalFinder.hpp  LinkRenewalProcess.cpp  LinkRenewalProcess.hpp  MCSOTDMA_Mac.cpp  MCSOTDMA_Mac.hpp  (+42 more)
docs/: implementation_diary.xopp
tests/: BCLinkManagerTests.cpp  BeaconModuleTests.cpp  CongestionEstimatorTests.cpp  ContentionEstimatorTests.cpp  FrequencyChannelTests.cpp  L2HeaderTests.cpp  L2PacketTests.cpp  LinkManagementEntityTests.cpp  LinkManagementProcessTests.cpp  LinkManagerTests.cpp  LinkProposalFinderTests.cpp  LinkRenewalProcessTests.cpp  MCSOTDMA_MacTests.cpp  MCSOTDMA_PhyTests.cpp  ManyUsersTests.cpp  MockLayers.hpp  MovingAverageTests.cpp  NewPPLinkManagerTests.cpp  NewSystemTests.cpp  OldPPLinkManagerTests.cpp  P2PLinkManagerTests.cpp  PPLinkManagerTests.cpp  QueueManagerTests.cpp  ReservationManagerTests.cpp  ReservationTableTests.cpp  ReservationTests.cpp  SHLinkManagerTests.cpp  SlotCalculatorTests.cpp  SystemTests.cpp  ThirdPartyLinkTests.cpp  ThreeUsersTests.cpp  unittests.cpp
